--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,12 @@
 buildscript {
 
     ext {
-        s_app_id                    = "com.myprofit.app"
-
         v_target_sdk                = 30
         v_min_sdk                   = 21
         v_compile_sdk               = 30
-        v_build_tools               = '29.0.3'
+        v_build_tools               = '30.0.2'
 
-        v_kotlin                    = '1.4.32'
+        v_kotlin                    = '1.5.31'
         v_coroutines                = '1.3.0'
         v_core_ktx                  = '1.3.2'
 
@@ -17,17 +15,17 @@ buildscript {
         v_navigation                = '2.3.0'
         v_play_services             = '16.0.0'
 
-        v_koin                      = '2.1.6'
+        v_koin                      = '3.1.3'
         v_retrofit                  = '2.9.0'
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$v_kotlin"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$v_navigation"
     }
@@ -36,7 +34,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
